# example_sphinx

./: .buildinfo  .editorconfig  .pre-commit-config.yaml  Makefile  README.md  about.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: about.doctree  environment.pickle  index.doctree
.github/workflows/: build.yml
_sources/: about.rst.txt  index.rst.txt
docs/: about.rst  conf.py  index.rst
